feat: fix abstract

--- a/thesis.tex
+++ b/thesis.tex
@@ -73,8 +73,8 @@
         in both design and functionality. It mostly matches the original
         functionality, modified by including changes requested by the ENAI
         members. Its primary focus is on improving the administration interface,
-        file handling, and filtering. The application is availablefor browsing
-        on the ENAI (European Network for Academic Integrity) website.
+        file handling, and filtering. The application is available for browsing
+        on the ENAI website.
         
         \url{https://academicintegrity.eu/materials}~\cite{enai_materials}
         
